...
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
    <string name="rename_tag_error_length">Tag length too long</string>
    <string name="rename_tag_error_spaces">Tags cannot contain spaces</string>
    <string name="rename_tag_message">An error occurred renaming the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="rename_tag_message_length">The tag length is too long. Please, try again with a shorter name. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="confirm_empty_trash">Do you want to empty the trash? All notes in trash will be permanently deleted. This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word</string>
    <string name="website">Visit website</string>
    <string name="more">More</string>
    <string name="send_logs">Send logs</string>
    <string name="note_selected">%d note selected</string>
    <string name="notes_selected">%d notes selected</string>
...
    <string name="detect_links">Detect links</string>
    <string name="share_analytics">Share analytics</string>
    <string name="share_analytics_summary">Help us improve Simplenote by sharing usage data with our analytics tool. %1$sLearn more%2$s</string>
    <string name="sustainer_app_icon">Sustainer app icon</string>

    <!-- Tags -->
    <string name="add_tag">Add Tag</string>
    <string name="dialog_tag_add_button_negative" translatable="false">@android:string/cancel</string>
    <string name="dialog_tag_add_button_positive" translatable="false">@string/save</string>
    <string name="dialog_tag_add_hint" translatable="false">@string/tag_name</string>
    <string name="dialog_tag_add_title" translatable="false">@string/add_tag</string>
    <string name="dialog_tag_error_message">An error occurred adding the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="dialog_tag_error_message_email" translatable="false">\u003c\u0061\u0020\u0068\u0072\u0065\u0066\u003d\u0022\u006d\u0061\u0069\u006c\u0074\u006f\u003a\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u0022\u003e\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006
...
    <string name="undo">Undo</string>
    <string name="note_deleted">Note trashed.</string>
    <string name="notes_trashed">Notes trashed.</string>

    <!-- welcome note for new users -->
    <string name="welcome_note">Welcome to Simplenote Android!\nOpen this note for instructions.\n\nTo create a new note, tap the \"New Note\" button with the plus icon.\n\nTo search your notes, tap the \"Search\" button with the magnifying glass icon and enter any text. Simplenote will show you recent searches initially and suggested searches while entering text. Notes matching the entered text w
    <string name="confirm_delete_tag">Are you sure you want to delete this tag?</string>
    <string name="new_note_list">New note&#8230;</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Sorting Options -->
    <string name="sort_by">Sort by</string>
...
    <string name="empty_notes_search_button">Create a new note titled \"%1$s\"</string>
    <string name="empty_notes_search_button_default">Create a new note</string>
    <string name="empty_notes_tag">No notes tagged \"%1$s\"</string>
    <string name="empty_notes_trash">Your trash is empty</string>
    <string name="empty_notes_untagged">No untagged notes</string>
    <string name="empty_notes_widget">No notes</string>
    <string name="empty_tags">No tags</string>
    <string name="empty_tags_search">No tags found</string>

    <string name="fullscreen_review_account_subtitle">You are registered with Simplenote using the email &lt;b&gt;%1$s&lt;/b&gt;.&lt;br&gt;&lt;br&gt;Improvements to account security may result in account loss if you no longer have access to this email address.</string>
    <string name="fullscreen_review_account_title">Review Your Account</string>
    <string name="fullscreen_review_account_button_primary">Confirm</string>
    <string name="fullscreen_review_account_button_secondary">Change email</string>

...
