...
        android:textColor="?attr/noteTitleColor"
        tools:text="Test"
        style="?android:attr/textAppearanceMedium">
    </com.automattic.simplenote.widgets.RobotoRegularTextView>

    <com.automattic.simplenote.widgets.RobotoRegularTextView
        android:id="@+id/tag_count"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_width="wrap_content"
        android:textColor="?attr/notePreviewColor"
        tools:text="24"
        style="?android:attr/textAppearanceMedium">
    </com.automattic.simplenote.widgets.RobotoRegularTextView>

    <ImageButton
        android:id="@+id/tag_trash"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/delete_tag"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
...
